--- a/app/templates/_navbar.html
+++ b/app/templates/_navbar.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/dashboard">SPT</a>
+    <a class="navbar-brand" href="/">SPT</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
-        <li class="nav-item"><a class="nav-link" href="/students">Students</a></li>
-        <li class="nav-item"><a class="nav-link" href="/scores/dashboard">Scores</a></li>
-        <li class="nav-item"><a class="nav-link" href="/scores/analytics">Analytics</a></li>
+        <li class="nav-item"><a class="nav-link" href="dashboard">Dashboard</a></li>
+        <li class="nav-item"><a class="nav-link" href="students">Students</a></li>
+        <li class="nav-item"><a class="nav-link" href="scores/dashboard">Scores</a></li>
+        <li class="nav-item"><a class="nav-link" href="scores/analytics">Analytics</a></li>
       </ul>
       <button class="btn btn-outline-light" onclick="logout()">Logout</button>
     </div>
