--- a/app/templates/student_detail.html
+++ b/app/templates/student_detail.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
-  {% include '_navbar.html' %}
+{% include '_navbar.html' %}
 <html>
-<head>
-  <title>{{ student.full_name }} - Progress Report</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-</head>
-<body class="p-4">
-  <div class="container">
-    <h3>{{ student.full_name }}'s Progress Report</h3>
-    <p><strong>Class:</strong> {{ student.class_name }} &nbsp;&nbsp; <strong>Roll No:</strong> {{ student.roll_number }}</p>
-    <p><strong>Date of Birth:</strong> {{ student.date_of_birth }}</p>
+  <head>
+    <title>{{ student.full_name }} - Progress Report</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+  </head>
+  <body class="p-4">
+    <div class="container">
+      <h3>{{ student.full_name }}'s Progress Report</h3>
+      <p>
+        <strong>Class:</strong> {{ student.class_name }} &nbsp;&nbsp; <strong>Roll No:</strong> {{ student.roll_number }}
+      </p>
+      <p>
+        <strong>Date of Birth:</strong> {{ student.date_of_birth }}
+      </p>
 
-    <hr>
+      <hr />
 
-    <h5>Subject Scores</h5>
-    <table class="table table-bordered table-striped">
-      <thead>
-        <tr>
-          <th>Subject</th>
-          <th>Marks Obtained</th>
-          <th>Total Marks</th>
-          <th>Exam Date</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for score in scores %}
-        <tr>
-          <td>{{ score.subject }}</td>
-          <td>{{ score.marks_obtained }}</td>
-          <td>{{ score.total_marks }}</td>
-          <td>{{ score.exam_date }}</td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+      <h5>Subject Scores</h5>
+      <table class="table table-bordered table-striped">
+        <thead>
+          <tr>
+            <th>Subject</th>
+            <th>Marks Obtained</th>
+            <th>Total Marks</th>
+            <th>Exam Date</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for score in scores %}
+            <tr>
+              <td>{{ score.subject }}</td>
+              <td>{{ score.marks_obtained }}</td>
+              <td>{{ score.total_marks }}</td>
+              <td>{{ score.exam_date }}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
 
-    <div class="mt-4">
-      <a href="/scores/report/{{ student._id }}" class="btn btn-outline-primary" target="_blank">
-        Download PDF Report
-      </a>
+      <div class="mt-4">
+        <a href="/scores/report/{{ student._id }}" class="btn btn-outline-primary" target="_blank">Download PDF Report</a>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
