--- a/app/templates/_navbar.html
+++ b/app/templates/_navbar.html
@@ -5,8 +5,8 @@
       <ul class="navbar-nav me-auto">
         <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
         <li class="nav-item"><a class="nav-link" href="/students">Students</a></li>
-        <li class="nav-item"><a class="nav-link" href="scores/dashboard">Scores</a></li>
-        <li class="nav-item"><a class="nav-link" href="scores/analytics">Analytics</a></li>
+        <li class="nav-item"><a class="nav-link" href="/scores/dashboard">Scores</a></li>
+        <li class="nav-item"><a class="nav-link" href="/scores/analytics">Analytics</a></li>
       </ul>
       <button class="btn btn-outline-light" onclick="logout()">Logout</button>
     </div>
