--- a/app/templates/_navbar.html
+++ b/app/templates/_navbar.html
@@ -7,7 +7,7 @@
           <a class="nav-link" href="/dashboard">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/students">Students</a>
+          <a class="nav-link" href="/students/list">Students</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/scores/dashboard">Scores</a>
