--- a/app/templates/score_analytics.html
+++ b/app/templates/score_analytics.html
@@ -1,8 +1,11 @@
 {% include '_navbar.html' %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Score Analytics</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Scores Analytics</title>
+  <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body class="p-4">
   <div class="container">
