--- a/app/templates/scores_dashboard.html
+++ b/app/templates/scores_dashboard.html
@@ -1,8 +1,11 @@
 {% include '_navbar.html' %}
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html> 
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scores Dashboard</title>
+  <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body class="p-4">
   <div class="container">
